2008-06-24  Sam Steingold  <sds@gnu.org>

	* error.d (check_variable_value_replacement): move here from eval.d
	* lispbibl.d (check_variable_value_replacement): prototype
	* eval.d (eval1): call setq here
	* control.d (check_global_symbol_value): remove
	(SYMBOL-VALUE): use check_variable_value_replacement

2008-06-23  Sam Steingold  <sds@gnu.org>

	* eval.d (check_variable_value_replacement): extracted from eval1()
	(eval1): use it
	(interpret_bytecode_): use it for cod_getvalue & cod_getvalue_push

2008-06-23  Sam Steingold  <sds@gnu.org>

	* unix/MAGIC.add: remove non-CLISP-specific entries;
	CLISP FASL files start with |SYSTEM|::|VERSION| since 2004-03-27

2008-06-21  Sam Steingold  <sds@gnu.org>

	* modules/netica/Makefile: do not use ${...-...}
	* modules/netica/demo.lisp: test netica:read-net
	* modules/netica/link.sh: netica 3.25 requires g++

2008-06-21  Sam Steingold  <sds@gnu.org>

	* io.d (pr_record_descr): use pr_symbol instead of literal ':' +
	pr_like_symbol(Symbol_name) to print slot names so that the keywords
	are printed as :|HOST| and not :|host| when writing a FASL file
	in a modern package

2008-06-19  Sam Steingold  <sds@gnu.org>

	* modules/netica/: updated to the Netica C API version 3.25 from 2.15

2008-06-17  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/posix.lisp (make-xterm-io-stream): avoid a race
	condition [between (delete-file tmps) and (mknod tmps :FIFO :RWXU)]
	by using mkdtemp and creating the pipe in the temporary directory;
	accept :XTERM argument and support rxvt in addition to xterm

2008-06-17  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (MKDTEMP): strip trailing slash from
	namez because mkdtemp(".../") --> ENOENT

2008-06-16  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (RAWSOCK:NETWORK): use getnetbyaddr
	instead of non-existent getnetbynumber

2008-06-13  Sam Steingold  <sds@gnu.org>

	* defmacro.lisp (make-macro-expansion): bind %proper-list-p to nil,