@@ -1,5 +1,11 @@
 2008-06-24  Sam Steingold  <sds@gnu.org>
 
+	* modules/clx/new-clx/clx.f (GET-PROPERTY):
+	use uint16 and uint32 instead of unsigned short and unsigned long
+	for reliability on 64-bit platforms
+
+2008-06-24  Sam Steingold  <sds@gnu.org>
+
 	* error.d (check_variable_value_replacement): move here from eval.d
 	* lispbibl.d (check_variable_value_replacement): prototype
 	* eval.d (eval1): call setq here
